--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "description": "Copies verison information to the clipboard.",
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon19.png",
     "popup": "popup.html"
   },
   "permissions": [
